# clubscore-turbo

./: .gitignore  README.md  package.json  turbo.json
apps/lan-core/: clubscore.db  clubscore.db-shm  clubscore.db-wal  package.json
apps/lan-core/scripts/: start-macos.sh
apps/lan-core/src/: db.ts  mdns.ts  server.ts
apps/scoreboard-windows/: index.html  package.json  tsconfig.json  vite.config.ts
apps/scoreboard-windows/src/: main.ts  style.css
apps/scoreboard-windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/scoreboard-windows/src-tauri/capabilities/: default.json
apps/scoreboard-windows/src-tauri/src/: main.rs
apps/scoring-android/: App.tsx  app.json  package.json
apps/setup-web/: index.html  package.json  tsconfig.json
apps/setup-web/src/: App.tsx  styles.css
docs/plans/: 2026-02-08-clubscore-lan-design.md
