[package]
name = "clubscore-scoreboard"
version = "0.0.1"
description = "Native Windows scoreboard for ClubScore"
authors = ["ClubScore"]
edition = "2021"

[lib]
name = "clubscore_scoreboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "clubscore-scoreboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
mdns-sd = "0.13.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.1", features = [] }
